# RecoilCompensatorCS2

./: Config.cs  GameUtils.cs  KnownKeys.cs  Mode.cs  Player.cs  Program.cs  RDevInputGrabber  README.md  RecoilCompensation.cs  RecoilCompensationDataBase.cs  RecoilCompensator.csproj  RecoilCompensator.sln  Slot.cs  Team.cs  Timers.cs  UserInputGrabber.cs  Utils.cs  Vector2.cs  Vector2Decimal.cs  Vector2Int.cs  Vector3.cs  Vector3Int.cs  VirtualInput.cs  Weapon.cs  WeaponSlotType.cs  WeaponType.cs  XdgSessionType.cs  norecoil.sh
RDevInputGrabber/: Cargo.toml
RDevInputGrabber/src/: main.rs
